--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -2,7 +2,12 @@ spring.cache.type: none
 spring:
   init:
     mode: always
+#  datasource:
+#    url: jdbc:postgresql://localhost:5433/jira-test
+#    username: jira
+#    password: JiraRush
   datasource:
-    url: jdbc:postgresql://localhost:5433/jira-test
-    username: jira
-    password: JiraRush
+    url: jdbc:h2:mem:test
+    driver-class-name: org.h2.Driver
+  liquibase:
+      changeLog: "classpath:changelog.sql"
