--- a/src/main/resources/application-authorization.yaml
+++ b/src/main/resources/application-authorization.yaml
@@ -1,8 +1,9 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5434/jira
+    url: jdbc:postgresql://localhost:5432/jira
     username: jira
     password: JiraRush
+    driver-class-name: org.postgresql.Driver
 
   security:
     oauth2:
