--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,21 @@
             <version>2.2.220</version>
             <scope>runtime</scope>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-spring-boot -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-spring-boot</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.22</version> <!-- Выберите актуальную версию -->
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -178,8 +193,24 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.22/aspectjweaver-1.9.22.jar"
+                    </argLine>
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
+                    <reportsDirectory>${project.build.directory}/allure-results</reportsDirectory>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.12.0</version>
+            </plugin>
+
+
         </plugins>
     </build>
 
